// build.gradle
plugins {
    id 'java'
    id 'io.papermc.paperweight.userdev' version '2.0.0-beta.21'
    id 'com.gradleup.shadow' version '9.6.1'
}

group = 'de.pixelrpg'
version = '1.0.0'

repositories {
    mavenCentral()
    maven {
        name = "papermc"
        url = "https://repo.papermc.io/repository/maven-public/"
    }
}

dependencies {
    paperweight.paperDevBundle("26.2.build.+")

    implementation 'com.zaxxer:HikariCP:7.0.2'
    implementation 'com.mysql:mysql-connector-j:9.7.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(25)
}

tasks.shadowJar {
    archiveFileName = "Pixel-RPG.jar"
    relocate 'com.zaxxer.hikari', 'de.pixelrpg.rpg.libs.hikari'
    relocate 'com.mysql', 'de.pixelrpg.rpg.libs.mysql'
}

tasks.jar {
    archiveClassifier.set('slim')
}

tasks.build {
    dependsOn tasks.shadowJar
}